...
                modifier = Modifier.testTag("screenTitle"))
          }
        }
      },
      navigationIcon = {
        IconButton(
            onClick = { navigationActions.goBack() }, modifier = Modifier.testTag("goBackButton")) {
              Icon(
                  imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                  contentDescription = null,
                  tint = MaterialTheme.colorScheme.onTertiary)
            }
      },
...
